cli/tests/testdata/run/internal_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Cannot load internal module from external code
await import("internal:runtime/js/01_build.js");
^
    at async [WILDCARD]
